--- a/src/app/landing-page/main-page/my-projects/game/game.component.scss
+++ b/src/app/landing-page/main-page/my-projects/game/game.component.scss
@@ -62,6 +62,14 @@ section {
     }
   }
   
+  .project-image{
+    transition: transform 0.3s ease-in-out;
+    &:hover{
+      transform: scale(1.1);
+    }
+  }
+
+
   .icons {
     display: flex;
     justify-content: center;
@@ -102,10 +110,9 @@ section {
     border-radius: 20px;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
-  }
-  
-  button:hover {
-    background: #89bcd95f;
+  &:hover{
+    background: #ffffff;
     color: #1e242b;
+  }
   }
   
