--- a/src/app/landing-page/main-page/my-projects/join/join.component.html
+++ b/src/app/landing-page/main-page/my-projects/join/join.component.html
@@ -52,7 +52,7 @@
         }
       </div>
   
-      <img src="../../../../../assets/icon/Screenshot project.png" alt="Screenshot of Project" />
+      <img  class="project-image" src="../../../../../assets/icon/Screenshot project.png" alt="Screenshot of Project" />
   
       <div class="button">
         <button>Live Test</button>
