--- a/src/app/landing-page/main-page/my-projects/ongoing-project/ongoing-project.component.html
+++ b/src/app/landing-page/main-page/my-projects/ongoing-project/ongoing-project.component.html
@@ -53,7 +53,7 @@
         }
       </div>
   
-      <img src="../../../../../assets/icon/Screenshot project.png" alt="Screenshot of Project" />
+      <img class="project-image" src="../../../../../assets/icon/Screenshot project.png" alt="Screenshot of Project" />
   
       <div class="button">
         <button>Live Test</button>
