--- a/src/app/landing-page/main-page/my-projects/ongoing-project/ongoing-project.component.scss
+++ b/src/app/landing-page/main-page/my-projects/ongoing-project/ongoing-project.component.scss
@@ -58,6 +58,12 @@ h3 {
     height: 312px;
   }
 }
+.project-image{
+  transition: transform 0.3s ease-in-out;
+  &:hover{
+    transform: scale(1.1);
+  }
+}
 .icons {
   display: flex;
   justify-content: center;
@@ -95,8 +101,8 @@ button {
   border-radius: 20px;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
-}
-button:hover {
-  background: #89bcd95f;
+&:hover{
+  background: #ffffff;
   color: #1e242b;
+}
 }
