--- a/src/app/landing-page/main-page/contact-me/contact-me.component.html
+++ b/src/app/landing-page/main-page/contact-me/contact-me.component.html
@@ -1,133 +1,143 @@
+<section id="contact">
 
+  <h2>Contact Me</h2>
 
-<h2>Contact Me</h2>
-
-<div class="arrowUp">
-  <span  *ngFor="let scroll of scrollIcons">
-    <img (click)="scrollToSection('about-me')"  [src]="scroll.current" (mouseenter)="onScrollHover(scroll.id)" (mouseleave)="onScrollLeave(scroll.id)" [alt]="scroll.id + ' icon'"/>
-  </span>
-</div>
-
-<div class="contact-text">
-
-  <span class="text">
-
-    Encourage people to contact you and describe what role you are interested in. Show that you will add value to their projects through your work. <br>
-    Example: Feel free to get in touch with job offers or opportunities such as: ...
-    
-  </span>
-    
-  <div class="contect-information">
-
-    <span class="contect-email">
-      <p> <img src="../../../../assets/icon/Contact/contact_email.svg" alt="Email Icon"> E-mail: marvinschneemann&#64;gmx.de </p>
+  <div class="arrowUp">
+    <span *ngFor="let scroll of scrollIcons">
+      <img
+        (click)="scrollToSection('about-me')"
+        [src]="scroll.current"
+        (mouseenter)="onScrollHover(scroll.id)"
+        (mouseleave)="onScrollLeave(scroll.id)"
+        [alt]="scroll.id + ' icon'"
+      />
     </span>
-    
-    <span class="contect-email">
-      <p> <img src="../../../../assets/icon/Contact/contact_phone_.svg" alt="Phone Icon"> Tel: 0151-62947199</p>
-    </span>
-  
   </div>
-    
-  
 
-</div>
+  <div class="contact-text">
+    <span class="text">
+      Encourage people to contact you and describe what role you are interested in. Show that you will add value to their projects through your work. <br />
+      Example: Feel free to get in touch with job offers or opportunities such as: ...
+    </span>
 
-
-
-
-
-<form (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm" class="contact-form">
-  <div class="form-row">
-    <!-- NAME -->
-    <div class="input-label">
-      <label for="name">Your Name</label>
-      <input
-        [(ngModel)]="contactData.name"
-        type="text"
-        id="name"
-        name="name"
-        required
-        #name="ngModel"
-      />
-      <span class="error-msg" *ngIf="name.invalid && name.touched">Please enter your name</span>
-    </div>
-
-    <!-- EMAIL -->
-    <div class="input-label">
-      <label for="email">Your Email</label>
-      <input
-        [(ngModel)]="contactData.email"
-        type="email"
-        id="email"
-        name="email"
-        required
-        pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}"
-        #email="ngModel"
-      />
-      <span class="error-msg" *ngIf="email.errors?.['required'] && email.touched">
-        Please enter your email
+    <div class="contect-information">
+      <span class="contect-email">
+        <p>
+          <img src="../../../../assets/icon/Contact/contact_email.svg" alt="Email Icon" />
+          E-mail: marvinschneemann&#64;gmx.de
+        </p>
       </span>
-      <span class="error-msg" *ngIf="email.errors?.['pattern'] && email.touched">
-        Please enter a valid email address
+      <span class="contect-email">
+        <p>
+          <img src="../../../../assets/icon/Contact/contact_phone_.svg" alt="Phone Icon" />
+          Tel: 0151-62947199
+        </p>
       </span>
     </div>
   </div>
 
-  <!-- MESSAGE -->
-  <div class="input-label textarea-label">
-    <label for="message">Your Message</label>
-    <textarea
-      [(ngModel)]="contactData.message"
-      name="message"
-      id="message"
-      required
-      minlength="20"
-      placeholder="Write something.."
-      #message="ngModel"
-    ></textarea>
-    <span class="error-msg" *ngIf="message.errors?.['required'] && message.touched">
-      Please enter a message
-    </span>
-    <span class="error-msg" *ngIf="message.errors?.['minlength'] && message.touched">
-      Message must be at least 20 characters long
-    </span>
-  </div>
+  <form (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm" class="contact-form">
+    <div class="form-row">
+      <!-- NAME -->
+      <div class="input-label">
+        <label for="name">Your Name</label>
+        <input
+          [(ngModel)]="contactData.name"
+          type="text"
+          id="name"
+          name="name"
+          required
+          #name="ngModel"
+        />
+        <span class="error-msg" *ngIf="name.invalid && name.touched">
+          Please enter your name
+        </span>
+      </div>
 
+      <!-- EMAIL -->
+      <div class="input-label">
+        <label for="email">Your Email</label>
+        <input
+          [(ngModel)]="contactData.email"
+          type="email"
+          id="email"
+          name="email"
+          required
+          pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}"
+          #email="ngModel"
+        />
+        <span class="error-msg" *ngIf="email.errors?.['required'] && email.touched">
+          Please enter your email
+        </span>
+        <span class="error-msg" *ngIf="email.errors?.['pattern'] && email.touched">
+          Please enter a valid email address
+        </span>
+      </div>
+    </div>
 
-<!-- PRIVACY CHECKBOX (mit Bild) -->
-<div class="botten-section">
+    <!-- MESSAGE -->
+    <div class="input-label textarea-label">
+      <label for="message">Your Message</label>
+      <textarea
+        [(ngModel)]="contactData.message"
+        name="message"
+        id="message"
+        required
+        minlength="20"
+        placeholder="Write something.."
+        #message="ngModel"
+      ></textarea>
+      <span class="error-msg" *ngIf="message.errors?.['required'] && message.touched">
+        Please enter a message
+      </span>
+      <span class="error-msg" *ngIf="message.errors?.['minlength'] && message.touched">
+        Message must be at least 20 characters long
+      </span>
+    </div>
 
-  <div class="custom-checkbox">
-    
-    <input
-    type="checkbox"
-    id="privacy"
-    name="privacy"
-    [(ngModel)]="privacyAccepted"
-    required
-    #privacy="ngModel"
-    />
-    
-    <label for="privacy" [class.error]="privacy.invalid && privacy.touched">
-      <span class="checkbox-image"></span>
-    </label>
-    
-    <span class="privacy-text">
-      I agree to the
-      &nbsp;<a href="/privacy-policy" target="_blank">privacy policy</a>&nbsp;
-      and agree to the processing of my data as outlined.
-    </span>
-    
-    <span class="error-msg" *ngIf="privacy.invalid && privacy.touched">
-      You must accept the privacy policy
-    </span>
-  </div>
-  
-  
-  <!-- BUTTON -->
-  <button class="contact-submit-button" type="submit" [disabled]="contactForm.invalid || !privacyAccepted">
-    Send
-  </button>
-</div>
-</form>
+    <!-- PRIVACY CHECKBOX mit ICON -->
+    <div class="botten-section">
+      <div class="custom-checkbox">
+        <!-- Verstecktes echtes Input-Feld -->
+        <input
+        type="checkbox"
+        id="privacy"
+        name="privacy"
+        [(ngModel)]="privacyAccepted"
+        #privacy="ngModel"
+        required
+        (change)="onPrivacyChange(privacy)"
+        />
+        
+        
+        <!-- Bild-Checkbox -->
+        <label for="privacy">
+          <span
+            class="checkbox-image"
+            [ngClass]="{
+              'checked': privacyAccepted,
+              'error': (privacy.invalid && (privacy.touched || contactForm.submitted))
+            }"
+          ></span>
+          
+          <!-- Text -->
+          <span class="privacy-text">
+            &nbsp;&nbsp;I agree to the
+            &nbsp;<a href="/privacy-policy" target="_blank">privacy policy</a>&nbsp;
+            and agree to the processing of my data as outlined.
+          </span>
+        </label>
+          
+        <!-- Fehlernachricht -->
+        <span class="error-msg" *ngIf="privacy.invalid && (privacy.touched || contactForm.submitted)">
+          You must accept the privacy policy
+        </span>
+      </div>
+
+      <!-- BUTTON -->
+      <button class="contact-submit-button" type="submit" [disabled]="contactForm.invalid || !privacyAccepted">
+        Send
+      </button>
+    </div>
+  </form>
+</section>
