--- a/src/app/landing-page/main-page/above-the-fold/above-the-fold.component.html
+++ b/src/app/landing-page/main-page/above-the-fold/above-the-fold.component.html
@@ -17,7 +17,7 @@
       
             <div class="titel-container">
               <h3>M.Schneemann</h3>
-              <h4>developer</h4>
+              <h4>{{"ABF.DEVELOPER" | translate}}</h4>
             </div>
           </div>
       
@@ -33,7 +33,7 @@
       
         <div class="name-Section">
           <h1>M.Schneemann</h1>
-          <h2>FRONTEND DEVELOPER</h2>
+          <h2>{{"ABF.TITEL_ABF" | translate }}</h2>
         </div>
       
         <div class="scroll-section">
