--- a/src/app/landing-page/main-page/contact-me/contact-me.component.scss
+++ b/src/app/landing-page/main-page/contact-me/contact-me.component.scss
@@ -246,6 +246,9 @@ h2 {
 
 .contact-submit-button {
   align-self: flex-end;
+  text-align: center;
+  
+  
   background-color: transparent;
   border: 1px solid #6bb1e9;
   color: white;
