--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <section>
   <div class="overlay-footer">
     <div class="footer-text" >
-      <p>Legal notice</p>
+      <p>{{ "ABF.LEGAL_NOTICE" | translate }}</p>
       <p>© Marvin Schneemann 2025</p>
     </div>
 
@@ -21,7 +21,7 @@
         </div>
         <div class="titel-container">
           <h3>M.Schneemann</h3>
-          <h4>developer</h4>
+          <h4>{{"ABF.DEVELOPER" | translate }}</h4>
         </div>
       </div>
     </div>
