--- a/src/app/landing-page/main-page/about-me/about-me.component.html
+++ b/src/app/landing-page/main-page/about-me/about-me.component.html
@@ -1,21 +1,21 @@
 <div class="about-me-content">
   <section id="about-me">
-    <h2>Why me</h2>
+    <h2>{{ "ABOUT_ME.TITLE" | translate }}</h2>
+
     <div class="section-text">
       <div class="section-image">
         <img src="../../../../assets/icon/icon1.png" alt="" />
 
         <div class="located">
-          <p><span>I am </span> located in Stockach</p>
+          <p><span>{{ "ABOUT_ME.I_AM" | translate }}</span> {{ "ABOUT_ME.LOCATION_TEXT" | translate }}</p>
         </div>
       </div>
 
       <div class="about-me-text">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt vel
-        molestias est atque aut? Ad illo expedita non quidem dolorum facere
-        ipsam eius corporis, reprehenderit maiores libero, laboriosam enim ab.
+        <p>{{ "ABOUT_ME.DESCRIPTION" | translate }}</p>
+
         <div class="button">
-          <button>Let´s talk</button>
+          <button (click)="scrollToSection('contact')" >  {{ "ABOUT_ME.BUTTON" | translate }}</button>
         </div>
       </div>
     </div>
