--- a/src/app/landing-page/main-page/above-the-fold/above-the-fold.component.scss
+++ b/src/app/landing-page/main-page/above-the-fold/above-the-fold.component.scss
@@ -1,3 +1,161 @@
+// header {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   background-color: #262e34;
+//   height: 100%;
+//   width: 100%;
+//   color: #F8F5EC;
+// }
+// section {
+//   width: 1214px;
+//   display: flex;
+//   justify-content: space-between;
+// }
+// .profil-Img {
+//   position: relative;
+//   width: clamp(200px, 50vw, 535px);
+//   height: clamp(250px, 64vw, 683px);
+
+//   .subject-img {
+//     position: absolute;
+//     bottom: 0;
+//     width: 100%;
+//     height: 100%;
+//     z-index: 2;
+//   }
+//   .shape-One,
+//   .shape-two {
+//     background-position: center bottom;
+//     position: absolute;
+//     background-size: cover;
+//     transition: opacity 0.5s ease-in-out;
+//     z-index: 1;
+//   }
+//   .shape-One {
+//     background-image: url("../../../../assets/img/shape.png");
+//     opacity: 1;
+//     position: absolute;
+//     top: 20px;
+//     width: 580px;
+//     height: 683px;
+//     transform: rotate(15deg);
+//     clip-path: none;
+//     border-radius: 100%;  
+//   }
+//   .shape-two {
+//     background-image: url("../../../../assets/img/shape2.png");
+//     opacity: 0;
+//     position: absolute;
+//     top: 20px;
+//     width: 580px;
+//     height: 683px;
+//     transform: rotate(35deg);
+//     clip-path: none;
+//     border-radius: 100%;
+//   }
+
+//   &:hover {
+//     .shape-One {
+//       opacity: 0;
+//     }
+
+//     .shape-two {
+//       opacity: 1;
+//     }
+//   }
+// }
+
+// .logo-Name-section {  
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+//   text-align: center;
+//   gap: 20px;
+// }
+// .logo-section {
+//   width: 630px;
+//   display: flex;
+//   align-items: center;
+//   justify-content: flex-end;
+//   gap: 230px;
+// }
+// .left-section {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   text-align: center;
+//   gap: 5px;
+// }
+// .logo-container {
+//   position: relative;
+//   width: 56px;
+//   height: 38px;
+//   .logo-1, 
+//   .logo-2 {
+//     position: absolute;
+//     width: 100%;
+//     height: 100%;
+//     transition: opacity 0.1s all;
+//   }
+//   .logo-1 {
+//     opacity: 1;
+//   }
+//   .logo-2 {
+//     opacity: 0;
+//   }
+//   &:hover {
+//     .logo-1 {
+//       opacity: 0;
+//     }
+//     .logo-2 {
+//       opacity: 1;
+//     }
+//   }
+// }
+
+// .titel-container {
+//   text-align: center;
+//   margin-top: 8px;
+// }
+
+// .name-Section {
+//   text-align: center;
+// }
+
+// .contact-icons {
+//   display: flex;
+//   justify-content: center;
+//   flex-direction: column;
+//   gap: 5px;
+//   img {
+//     width: 30px;
+//     height: 30px;
+//     cursor: pointer;
+//   }
+// }
+
+// .scroll-section {
+//   display: flex;
+//   justify-content: center;
+//   margin-top: 50px;
+
+//   img {
+//     width: 38px;
+//     height: 89px;
+//     cursor: pointer;
+//   }
+// }
+
+
+// @media (max-width: 1240px) {
+  
+//   .profil-Img{
+    
+//   }
+// }
+
 header {
   display: flex;
   justify-content: center;
@@ -7,15 +165,17 @@ header {
   width: 100%;
   color: #F8F5EC;
 }
+
 section {
-  width: 1214px;
+  width: clamp(320px, 90vw, 1214px);
   display: flex;
   justify-content: space-between;
 }
+
 .profil-Img {
   position: relative;
-  width: 535px;
-  height: 683px;
+  width: clamp(200px, 50vw, 535px);
+  height: clamp(300px, 60vw, 683px);
 
   .subject-img {
     position: absolute;
@@ -24,6 +184,7 @@ section {
     height: 100%;
     z-index: 2;
   }
+
   .shape-One,
   .shape-two {
     background-position: center bottom;
@@ -32,24 +193,24 @@ section {
     transition: opacity 0.5s ease-in-out;
     z-index: 1;
   }
+
   .shape-One {
     background-image: url("../../../../assets/img/shape.png");
     opacity: 1;
-    position: absolute;
     top: 20px;
-    width: 580px;
-    height: 683px;
+    width: clamp(100px, 55vw, 580px);
+    height: clamp(100px, 60vw, 683px);
     transform: rotate(15deg);
     clip-path: none;
-    border-radius: 100%;  
+    border-radius: 100%;
   }
+
   .shape-two {
     background-image: url("../../../../assets/img/shape2.png");
     opacity: 0;
-    position: absolute;
     top: 20px;
-    width: 580px;
-    height: 683px;
+    width: clamp(100px, 55vw, 580px);
+    height: clamp(100px, 60vw, 683px);
     transform: rotate(35deg);
     clip-path: none;
     border-radius: 100%;
@@ -59,7 +220,6 @@ section {
     .shape-One {
       opacity: 0;
     }
-
     .shape-two {
       opacity: 1;
     }
@@ -72,26 +232,30 @@ section {
   justify-content: center;
   align-items: center;
   text-align: center;
-  gap: 20px;
+  gap: clamp(10px, 3vw, 20px);
 }
+
 .logo-section {
-  width: 630px;
+  width: clamp(300px, 80vw, 630px);
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  gap: 230px;
+  gap: clamp(80px, 15vw, 230px);
 }
+
 .left-section {
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  gap: 5px;
+  gap: clamp(3px, 1vw, 5px);
 }
+
 .logo-container {
   position: relative;
-  width: 56px;
-  height: 38px;
+  width: clamp(28px, 8vw, 56px);
+  height: clamp(20px, 5vw, 38px);
+
   .logo-1, 
   .logo-2 {
     position: absolute;
@@ -99,12 +263,15 @@ section {
     height: 100%;
     transition: opacity 0.1s all;
   }
+
   .logo-1 {
     opacity: 1;
   }
+
   .logo-2 {
     opacity: 0;
   }
+
   &:hover {
     .logo-1 {
       opacity: 0;
@@ -117,7 +284,7 @@ section {
 
 .titel-container {
   text-align: center;
-  margin-top: 8px;
+  margin-top: clamp(4px, 1vw, 8px);
 }
 
 .name-Section {
@@ -128,10 +295,11 @@ section {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  gap: 5px;
+  gap: clamp(2px, 1vw, 5px);
+
   img {
-    width: 30px;
-    height: 30px;
+    width: clamp(20px, 5vw, 30px);
+    height: clamp(20px, 5vw, 30px);
     cursor: pointer;
   }
 }
@@ -139,12 +307,17 @@ section {
 .scroll-section {
   display: flex;
   justify-content: center;
-  margin-top: 50px;
+  margin-top: clamp(25px, 5vw, 50px);
 
   img {
-    width: 38px;
-    height: 89px;
+    width: clamp(20px, 6vw, 38px);
+    height: clamp(50px, 15vw, 89px);
     cursor: pointer;
   }
 }
 
+@media (max-width: 1240px) {
+  .profil-Img {
+    /* kannst du leer lassen oder spezifisch anpassen */
+  }
+}
