--- a/src/app/landing-page/main-page/main-page.component.html
+++ b/src/app/landing-page/main-page/main-page.component.html
@@ -1,6 +1,6 @@
 <app-above-the-fold></app-above-the-fold> 
 
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar>
 
 <app-about-me></app-about-me>
 
@@ -14,4 +14,4 @@
 
 <app-contact-me></app-contact-me>
 
-<app-footer></app-footer>
+<app-footer></app-footer> -->
