--- a/src/app/landing-page/main-page/main-page.component.html
+++ b/src/app/landing-page/main-page/main-page.component.html
@@ -1,8 +1,8 @@
 <app-above-the-fold></app-above-the-fold> 
 
-<!-- <app-navbar></app-navbar>
+<app-navbar></app-navbar>
 
-<app-about-me></app-about-me>
+<!-- <app-about-me></app-about-me>
 
 <app-abilities></app-abilities>
 
