--- a/src/app/landing-page/main-page/above-the-fold/above-the-fold.component.scss
+++ b/src/app/landing-page/main-page/above-the-fold/above-the-fold.component.scss
@@ -156,29 +156,31 @@
 //   }
 // }
 
-header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #262e34;
-  height: 100%;
-  width: 100%;
-  color: #F8F5EC;
-}
 
 // header {
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   background-color: #262e34;
-//   height: clamp(400px, 80vh, 900px); /* wächst mit der Höhe des Viewports */
-//   width: clamp(320px, 100vw, 1440px); /* 100% Breite mit Max-Begrenzung */
-//   color: #F8F5EC;
-//   margin-right: 15px;
-//   margin-left: 15px;
-// }
-
-
+  //   display: flex;
+  //   justify-content: center;
+  //   align-items: center;
+  //   background-color: #262e34;
+  //   height: clamp(400px, 80vh, 900px); /* wächst mit der Höhe des Viewports */
+  //   width: clamp(320px, 100vw, 1440px); /* 100% Breite mit Max-Begrenzung */
+  //   color: #F8F5EC;
+  //   margin-right: 15px;
+  //   margin-left: 15px;
+  // }
+  
+  header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #262e34;
+    height: 100%;
+    width: clamp(320px, 100%, 1440px);
+    margin: 0 auto;
+    padding: 0 16px;
+    color: #F8F5EC;
+  }
+  
 section {
   width: clamp(320px, 90vw, 1214px);
   display: flex;
@@ -187,15 +189,13 @@ section {
 
 .profil-Img {
   position: relative;
-  width: clamp(200px, 50vw, 535px);
-  height: clamp(300px, 60vw, 683px);
-
   .subject-img {
     position: relative;
-    bottom: 0;
-    width: clamp(200px, 50vw, 535px);
-    height: clamp(300px, 60vw, 683px);
+    display: flex;
+    width:535px;
+    height: 683px;
     z-index: 2;
+
   }
 
   .shape-One,
@@ -211,8 +211,8 @@ section {
     background-image: url("../../../../assets/img/shape.png");
     opacity: 1;
     top: 20px;
-    width: clamp(50px, 55vw, 580px);
-    height: clamp(50px, 60vw, 683px);
+    width:  580px;
+    height: 683px;
     transform: rotate(15deg);
     clip-path: none;
     border-radius: 100%;
@@ -222,8 +222,8 @@ section {
     background-image: url("../../../../assets/img/shape2.png");
     opacity: 0;
     top: 20px;
-    width: clamp(50px, 55vw, 580px);
-    height: clamp(50px, 60vw, 683px);
+    width: 580px;
+    height: 683px;
     transform: rotate(35deg);
     clip-path: none;
     border-radius: 100%;
@@ -330,8 +330,27 @@ section {
   }
 }
 
-@media (max-width: 1240px) {
-  .profil-Img {
-    /* kannst du leer lassen oder spezifisch anpassen */
+@media (max-width: 1130px) {
+  .shape-One{
+    height: 480px !important;
+    width: 563px !important;
+    transform: rotate(90deg) !important;
+    top: 100px !important;
+    left: 5px !important;
+    right: 5px !important;
   }
+
+  .shape-two{
+    height: 480px !important;
+    width: 563px !important;
+    transform: rotate(60deg) !important;
+    top: 100px !important;
+
+  }
+
+  .subject-img {
+    width:435px !important;
+    height: 583px !important;
+  }
+
 }
