--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,9 +60,12 @@
   font-style: normal;
 }
 
-
+html {
+  overflow-x: hidden;
+}
 
 * {
+  box-sizing: border-box;
   margin: 0;
   scroll-behavior: smooth;
 }
@@ -73,6 +76,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow-x: hidden;
+
+  max-width: 100vw;
+
 
   margin: 0;
 }
