--- a/src/app/landing-page/main-page/above-the-fold/above-the-fold.component.scss
+++ b/src/app/landing-page/main-page/above-the-fold/above-the-fold.component.scss
@@ -179,6 +179,7 @@
     margin: 0 auto;
     padding: 0 16px;
     color: #F8F5EC;
+    z-index: 1;
   }
   
 section {
@@ -194,7 +195,7 @@ section {
     display: flex;
     width:535px;
     height: 683px;
-    z-index: 2;
+    z-index: 1;
 
   }
 
@@ -204,7 +205,7 @@ section {
     position: absolute;
     background-size: cover;
     transition: opacity 0.5s ease-in-out;
-    z-index: 1;
+    z-index: 0;
   }
 
   .shape-One {
@@ -351,6 +352,31 @@ section {
   .subject-img {
     width:435px !important;
     height: 583px !important;
+  }
+
+}
+
+@media (max-width: 1000px) {
+  .shape-One{
+    height: 380px !important;
+    width: 463px !important;
+    transform: rotate(50deg) !important;
+    top: 150px !important;
+    left: -60px !important;
+  }
+
+  .shape-two{
+    height: 380px !important;
+    width: 463px !important;
+    transform: rotate(60deg) !important;
+    top: 150px !important;
+    left: -60px !important;
+
+  }
+
+  .subject-img {
+    width:335px !important;
+    height: 483px !important;
   }
 
 }
