--- a/src/app/landing-page/main-page/above-the-fold/above-the-fold.component.scss
+++ b/src/app/landing-page/main-page/above-the-fold/above-the-fold.component.scss
@@ -1,187 +1,16 @@
-// header {
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   background-color: #262e34;
-//   height: 100%;
-//   width: 100%;
-//   color: #F8F5EC;
-// }
-// section {
-//   width: 1214px;
-//   display: flex;
-//   justify-content: space-between;
-// }
-// .profil-Img {
-//   position: relative;
-//   width: clamp(200px, 50vw, 535px);
-//   height: clamp(250px, 64vw, 683px);
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #262e34;
+  height: 100%;
+  width: clamp(320px, 100%, 1440px);
+  margin: 0 auto;
+  padding: 0 16px;
+  color: #f8f5ec;
+  z-index: 1;
+}
 
-//   .subject-img {
-//     position: absolute;
-//     bottom: 0;
-//     width: 100%;
-//     height: 100%;
-//     z-index: 2;
-//   }
-//   .shape-One,
-//   .shape-two {
-//     background-position: center bottom;
-//     position: absolute;
-//     background-size: cover;
-//     transition: opacity 0.5s ease-in-out;
-//     z-index: 1;
-//   }
-//   .shape-One {
-//     background-image: url("../../../../assets/img/shape.png");
-//     opacity: 1;
-//     position: absolute;
-//     top: 20px;
-//     width: 580px;
-//     height: 683px;
-//     transform: rotate(15deg);
-//     clip-path: none;
-//     border-radius: 100%;  
-//   }
-//   .shape-two {
-//     background-image: url("../../../../assets/img/shape2.png");
-//     opacity: 0;
-//     position: absolute;
-//     top: 20px;
-//     width: 580px;
-//     height: 683px;
-//     transform: rotate(35deg);
-//     clip-path: none;
-//     border-radius: 100%;
-//   }
-
-//   &:hover {
-//     .shape-One {
-//       opacity: 0;
-//     }
-
-//     .shape-two {
-//       opacity: 1;
-//     }
-//   }
-// }
-
-// .logo-Name-section {  
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: center;
-//   align-items: center;
-//   text-align: center;
-//   gap: 20px;
-// }
-// .logo-section {
-//   width: 630px;
-//   display: flex;
-//   align-items: center;
-//   justify-content: flex-end;
-//   gap: 230px;
-// }
-// .left-section {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: center;
-//   text-align: center;
-//   gap: 5px;
-// }
-// .logo-container {
-//   position: relative;
-//   width: 56px;
-//   height: 38px;
-//   .logo-1, 
-//   .logo-2 {
-//     position: absolute;
-//     width: 100%;
-//     height: 100%;
-//     transition: opacity 0.1s all;
-//   }
-//   .logo-1 {
-//     opacity: 1;
-//   }
-//   .logo-2 {
-//     opacity: 0;
-//   }
-//   &:hover {
-//     .logo-1 {
-//       opacity: 0;
-//     }
-//     .logo-2 {
-//       opacity: 1;
-//     }
-//   }
-// }
-
-// .titel-container {
-//   text-align: center;
-//   margin-top: 8px;
-// }
-
-// .name-Section {
-//   text-align: center;
-// }
-
-// .contact-icons {
-//   display: flex;
-//   justify-content: center;
-//   flex-direction: column;
-//   gap: 5px;
-//   img {
-//     width: 30px;
-//     height: 30px;
-//     cursor: pointer;
-//   }
-// }
-
-// .scroll-section {
-//   display: flex;
-//   justify-content: center;
-//   margin-top: 50px;
-
-//   img {
-//     width: 38px;
-//     height: 89px;
-//     cursor: pointer;
-//   }
-// }
-
-
-// @media (max-width: 1240px) {
-  
-//   .profil-Img{
-    
-//   }
-// }
-
-
-// header {
-  //   display: flex;
-  //   justify-content: center;
-  //   align-items: center;
-  //   background-color: #262e34;
-  //   height: clamp(400px, 80vh, 900px); /* wächst mit der Höhe des Viewports */
-  //   width: clamp(320px, 100vw, 1440px); /* 100% Breite mit Max-Begrenzung */
-  //   color: #F8F5EC;
-  //   margin-right: 15px;
-  //   margin-left: 15px;
-  // }
-  
-  header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #262e34;
-    height: 100%;
-    width: clamp(320px, 100%, 1440px);
-    margin: 0 auto;
-    padding: 0 16px;
-    color: #F8F5EC;
-    z-index: 1;
-  }
-  
 section {
   width: clamp(320px, 90vw, 1214px);
   display: flex;
@@ -193,10 +22,9 @@ section {
   .subject-img {
     position: relative;
     display: flex;
-    width:535px;
+    width: 535px;
     height: 683px;
     z-index: 1;
-
   }
 
   .shape-One,
@@ -212,7 +40,7 @@ section {
     background-image: url("../../../../assets/img/shape.png");
     opacity: 1;
     top: 20px;
-    width:  580px;
+    width: 580px;
     height: 683px;
     transform: rotate(15deg);
     clip-path: none;
@@ -240,7 +68,7 @@ section {
   }
 }
 
-.logo-Name-section {  
+.logo-Name-section {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -261,9 +89,18 @@ section {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items:flex-start ;
+  align-items: flex-start;
   text-align: center;
   gap: clamp(3px, 1vw, 5px);
+}
+.left-section-two{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  text-align: center;
+  gap: clamp(3px, 1vw, 5px);
+  display: none;
 }
 
 .logo-container {
@@ -271,7 +108,7 @@ section {
   width: clamp(28px, 8vw, 56px);
   height: clamp(20px, 5vw, 38px);
 
-  .logo-1, 
+  .logo-1,
   .logo-2 {
     position: absolute;
     width: 100%;
@@ -332,51 +169,135 @@ section {
 }
 
 @media (max-width: 1130px) {
-  .shape-One{
+  .shape-One {
     height: 480px !important;
     width: 563px !important;
     transform: rotate(90deg) !important;
-    top: 100px !important;
-    left: 5px !important;
+    top: 75px !important;
+    left: -70px !important;
     right: 5px !important;
   }
 
-  .shape-two{
+  .shape-two {
     height: 480px !important;
     width: 563px !important;
-    transform: rotate(60deg) !important;
-    top: 100px !important;
-
+    transform: rotate(75deg) !important;
+    top: 75px !important;
+    left: -70px !important;
+    right: 5px !important;
   }
 
   .subject-img {
-    width:435px !important;
+    width: 435px !important;
     height: 583px !important;
   }
-
 }
 
 @media (max-width: 1000px) {
-  .shape-One{
+  .shape-One {
     height: 380px !important;
     width: 463px !important;
-    transform: rotate(50deg) !important;
-    top: 150px !important;
-    left: -60px !important;
+    transform: rotate(120deg) !important;
+    top: 108px !important;
+    left: -61px !important;
   }
 
-  .shape-two{
+  .shape-two {
     height: 380px !important;
     width: 463px !important;
-    transform: rotate(60deg) !important;
-    top: 150px !important;
-    left: -60px !important;
-
+    transform: rotate(284deg) !important;
+    top: 81px !important;
+    left: -61px !important;
   }
 
   .subject-img {
-    width:335px !important;
+    width: 335px !important;
     height: 483px !important;
   }
-
 }
+
+@media (max-width: 730px) {
+  .logo-section {
+    display: flex;
+    flex-direction: column;
+    gap: clamp(0px, 15vw, 0px);
+  }
+
+  .logo-Name-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: clamp(0px, 3vw, 0px);
+  }
+  .contact-icons {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+
+    gap: clamp(2px, 1vw, 5px);
+  }
+  .arrowDown{
+    width: 40px !important;
+    height: 70px !important;
+  }
+ 
+}
+
+@media (max-width: 650px) {
+  section{
+    flex-direction: column;
+  }
+
+  .profil-Img {
+    display: flex;
+    justify-content: center;
+  }
+
+  .subject-img {
+    width: 335px !important;
+    height: 493px !important;
+    top: -1px;
+    border-bottom-left-radius: 167px;
+    border-bottom-right-radius: 156px;
+}
+
+  }
+
+  .shape-One {
+    height: 380px !important;
+    width: 463px !important;
+    transform: rotate(-81deg) !important;
+    top: 72px !important;
+    left: 71px !important;
+    opacity: 1 !important;
+    pointer-events: none;
+    transition: none !important;
+  }
+
+  .shape-two {
+    display: none !important;
+  }
+
+  .profil-Img:hover .shape-One {
+    opacity: 1 !important;
+  }
+
+  .profil-Img:hover .shape-two {
+    opacity: 0 !important;
+  }
+
+  .left-section-two{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    text-align: center;
+    gap: clamp(3px, 1vw, 5px);
+ 
+  }
+  .left-section {
+    display: none;
+  }
+
